# My_Fantasy_Analytics

./: .gitignore  Docker-compose.yaml  Dockerfile  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
DEV/app/python/: README.md
DEV/app/python/tests/: test_my_fantasy_analytics.py
DEV/ffa/: Dockerfile
Prelim_Analytics/: Docker-compose.yaml
Prelim_Analytics/data/: historic_data.db-journal
Prelim_Analytics/data_collection/fantasy_pros/: fantasy_pros_game_stats.ipynb  game_stats_scraper.py
Prelim_Analytics/data_collection/nfl_fantasy/: scrapy.cfg
Prelim_Analytics/data_collection/nfl_fantasy/nfl_fantasy/: items.py  middlewares.py  pipelines.py  settings.py
app/: Docker-compose_APP.yaml  pyproject.toml
app/python/: pyproject.toml
app/r/: ffa_script.r
data_analysis/: Dockerfile
db/: Docker-compose_DB.yaml  S21W15.csv
db/data/: projections_2021_wk17.csv  projections_2021_wk17.xlsx  projections_2021_wk19.csv  projections_2021_wk19.xlsx  projections_2021_wk7.csv  projections_2021_wk7.xlsx  projections_2021_wk8.csv  projections_2021_wk8.xlsx  projections_2021_wk9.csv  projections_2021_wk9.xlsx
ffa/: Docker-compose_FFA.yaml  Dockerfile
misc/: Docker_compose_DEV.yaml
misc/csv_to_db/: Docker-compose_dbwriter.yaml  Dockerfile  csv_to_db.ipynb  pyproject.toml  testing.txt
misc/csv_to_mariadb/: Docker-compose_dbwriter.yaml  Dockerfile  csv_to_mariadb.ipynb
misc/csv_to_postgre/: Docker-compose_dbwriter.yaml  csv_to_postgre.ipynb  pyproject.toml
web/: Docker-compose_WEB.yaml
