[tool.poetry]
name = "My Fantasy Analytics"
version = "0.1.0"
description = ""
authors = ["Tanner Gibbs"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
